--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
           <li class="active"><a href="<%= root_path %>"><span class="sr-only">Welcome</span></a></li>
           <li><%= link_to "Students", students_path %></li>
           <li><%= link_to "Hostels", hostels_path %></li>
+          <li><%= link_to "Manage Accomodations", accomodations_path %></li>
         </ul>
         </ul>
       </div><!-- /.navbar-collapse -->
