--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,8 +1,37 @@
-<h1>Student#index</h1>
-<p>Find me in app/views/student/index.html.erb</p>
+<h1>Listing students</h1>
 
-<ul>
-  <% @students.each do |student| %>
-    <li><%= student.lastname %> | <%= student.firstname %></li>
-  <% end %>
-</ul>
+<table>
+  <thead>
+    <tr>
+      <th>Lastname</th>
+      <th>Firstname</th>
+      <th>Matric nos</th>
+      <th>Department</th>
+      <th>Level</th>
+      <th>Email</th>
+      <th>Phonenos</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% @students.each do |student| %>
+      <tr>
+        <td><%= student.lastname %></td>
+        <td><%= student.firstname %></td>
+        <td><%= student.matric_nos %></td>
+        <td><%= student.department %></td>
+        <td><%= student.level %></td>
+        <td><%= student.email %></td>
+        <td><%= student.phonenos %></td>
+        <td><%= link_to 'Show', student %></td>
+        <td><%= link_to 'Edit', edit_student_path(student) %></td>
+        <td><%= link_to 'Destroy', student, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Student', new_student_path %>
