--- a/app/views/accomodations/edit.html.erb
+++ b/app/views/accomodations/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing accomodation</h1>
+<h3>Update accomodation details</h3>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @accomodation %> |
-<%= link_to 'Back', accomodations_path %>
