--- a/app/views/hostels/new.html.erb
+++ b/app/views/hostels/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New hostel</h1>
+<section class="centralize col-md-9">
+  <h3>New hostel</h3>
 
-<%= render 'form' %>
-
-<%= link_to 'Back', hostels_path %>
+  <%= render 'form' %>
+</section>
