--- a/app/views/hostels/edit.html.erb
+++ b/app/views/hostels/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing hostel</h1>
+<section class="centralize col-md-9">
+  <h3>Editing hostel</h3>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Show', @hostel %> |
-<%= link_to 'Back', hostels_path %>
+  <%= link_to 'Cancel', @hostel, class:"btn btn-default" %>
+</section>
