--- a/app/views/hostels/index.html.erb
+++ b/app/views/hostels/index.html.erb
@@ -1,11 +1,13 @@
-<h1>Listing hostels</h1>
+<h1>Hostels</h1>
 
-<table>
+<%= link_to 'New Hostel', new_hostel_path , class:"btn btn-primary create"%>
+
+<table class="table table-condensed">
   <thead>
     <tr>
-      <th>Name</th>
+      <th>Hostel</th>
       <th>Description</th>
-      <th>Room count</th>
+      <th>Number of rooms</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,17 +15,12 @@
   <tbody>
     <% @hostels.each do |hostel| %>
       <tr>
-        <td><%= hostel.name %></td>
+        <td><a href="<%= hostel_path(hostel) %>"><%= hostel.name %></a></td>
         <td><%= hostel.description %></td>
         <td><%= hostel.room_count %></td>
-        <td><%= link_to 'Show', hostel %></td>
-        <td><%= link_to 'Edit', edit_hostel_path(hostel) %></td>
-        <td><%= link_to 'Destroy', hostel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><a href="<%= edit_hostel_path(hostel) %>" title="update"><i class="fa fa-edit"></i></a></td>
+        <td><%= link_to content_tag(:i, nil,  class: "fa fa-trash", title:"remove student"), hostel, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Hostel', new_hostel_path %>
