--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>FUOApp</title>
+  <title>FUO Student Manager</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
-  <nav class="navbar  navbar-default">
+  <nav class="navbar  navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -17,24 +17,25 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">FUO Student Manager</a>
+        <a class="navbar-brand" href="<%= root_path %>">FUO Lodge Manager</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="<%= root_path %>"><span class="sr-only">Welcome</span></a></li>
           <li><%= link_to "Students", students_path %></li>
           <li><%= link_to "Hostels", hostels_path %></li>
-          <li><%= link_to "Manage Accomodations", accomodations_path %></li>
+          <li><%= link_to "Students Accomodation", accomodations_path %></li>
         </ul>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </nav>
 
-  <div class="container-fluid">
-    <%= yield %>
+  <div class="container main">
+    <section class="row">
+       <%= yield %>
+    </section>
   </div>
 </body>
 </html>
