--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="<%= root_path %>">FUO Lodge Manager</a>
+        <a class="navbar-brand" href="<%= root_path %>">FUO Student Manager</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
