--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,13 +22,39 @@
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-          <li><%= link_to "Students", students_path %></li>
-          <li><%= link_to "Hostels", hostels_path %></li>
-          <li><%= link_to "Students Accomodation", accomodations_path %></li>
-        </ul>
-        </ul>
+        <% if session[:user_id] %>
+          <ul class="nav navbar-nav">
+            <li><%= link_to "Students", students_path %></li>
+            <li><%= link_to "Hostels", hostels_path %></li>
+            <li><%= link_to "Students Accomodation", accomodations_path %>
+            </li>
+            <li><%= link_to "Administrators", administrators_path %></li>
+          </ul>
+
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"> 
+                <span><i class="fa fa-user"> <%= @current_admin.email %> </i></span>
+                <span class="caret"></span>
+              </a>      
+              <ul class="dropdown-menu" role="menu">
+
+                <li class="divider"></li>
+                <li>
+                  <%= link_to signout_path, method: :delete do %>
+                    <i class="fa fa-sign-out"></i>
+                    <span>Sign out</span>
+                  <% end %>
+                </li>
+              </ul>
+            </li>  
+          </ul>
+
+      
+        <% end %>
       </div><!-- /.navbar-collapse -->
+
+
     </div><!-- /.container-fluid -->
   </nav>
 
